--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,7 +3,7 @@ spring.freemarker.expose-request-attributes=true
 spring.mvc.static-path-pattern=/static/**
 
 spring.datasource.generate-unique-name=false
-spring.datasource.url=jdbc:mysql://localhost:3306/joradb
+spring.datasource.url=jdbc:mysql://localhost:3306/joratestdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
