Added simple notification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Jora
+server.port=8081
 spring.freemarker.expose-request-attributes=true
 spring.mvc.static-path-pattern=/static/**
 
@@ -11,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
+
+#fcm.service-account-file=jora-67233-firebase.json
