--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
+
+logging.level.org.springframework.messaging=DEBUG
+logging.level.org.springframework.web=DEBUG
