Discussion migrated to mongodb

--- a/pom.xml
+++ b/pom.xml
@@ -91,10 +91,10 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
-		</dependency>-->
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 
 	</dependencies>
 
