--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,12 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
 
-spring.servlet.multipart.max-file-size=30MB
-spring.servlet.multipart.max-request-size=30MB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=joradb
+
+spring.servlet.multipart.max-file-size=16MB
+spring.servlet.multipart.max-request-size=16MB
 
 #logging.level.org.springframework.messaging=DEBUG
 #logging.level.org.springframework.web=DEBUG
