Integrated Redis for user caching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,8 @@ spring.data.mongodb.database=joradb
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
+spring.cache.redis.time-to-live=900000
+#ttl 15 min
+
 #logging.level.org.springframework.messaging=DEBUG
 #logging.level.org.springframework.web=DEBUG
