--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 logs/
+.env
+src/main/resources/application-dev.yml
 !**/src/main/**/target/
 !**/src/test/**/target/
 !**/src/main/**/resources/static/components
