--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -31,6 +31,9 @@ spring:
   cache:
     redis:
       time-to-live: 900000 #ttl 15 min
+  kafka:
+    bootstrap-servers:
+      - jora-kafka-logs:9092
 
 server:
   address: 0.0.0.0
