Added redis cache for project_id and notification objects

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 logs/
 redisdata/
 .env
+appmap.yml
 src/main/resources/application-dev.yml
 !**/src/main/**/target/
 !**/src/test/**/target/
