--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -32,8 +32,7 @@ spring:
     redis:
       time-to-live: 900000 #ttl 15 min
   kafka:
-    bootstrap-servers:
-      - jora-kafka-logs:9092
+    bootstrap-servers: kafka:9092,172.17.0.1:9092,localhost:9092
 
 server:
   address: 0.0.0.0
