--- a/src/test/resources/application-test-ui.properties
+++ b/src/test/resources/application-test-ui.properties
@@ -4,8 +4,8 @@ spring.mvc.static-path-pattern=/static/**
 
 spring.datasource.generate-unique-name=false
 spring.datasource.url=jdbc:mysql://localhost:3306/uitestdb
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
