--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,8 +4,8 @@ spring.mvc.static-path-pattern=/static/**
 
 spring.datasource.generate-unique-name=false
 spring.datasource.url=jdbc:mysql://localhost:3306/joratestdb
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
