--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,7 +62,7 @@ jobs:
   allure-report:
     name: Generate Allure Report
     runs-on: ubuntu-latest
-    needs: [unit-tests]
+    needs: [unit-tests, integration-tests ]
     permissions:
       pages: write
       id-token: write
@@ -80,6 +80,12 @@ jobs:
           name: unit-tests-results
           path: target/allure-results
 
+      - name: Download integration tests results
+        uses: actions/download-artifact@v4
+        with:
+          name: integration-tests-results
+          path: target/allure-results
+
       - name: Generate Allure Report
         run: |
           mvn allure:report
@@ -89,7 +95,6 @@ jobs:
         run: ls -R target/site/allure-maven-plugin
       - name: Check Allure test results
         run: ls -R target/allure-results
-
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
