--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.19.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.codeborne</groupId>
 			<artifactId>selenide</artifactId>
 			<scope>test</scope>
